# RetailPulse-AI

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cleanup_execution_report.md  cleanup_phase_1_report.md  pyproject.toml  requirements-forecasting-optional.txt  requirements-lock.txt  requirements.txt  run_mlflow_ui.py  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
api/: __init__.py  main.py
app/: Home.py  theme.py
docs/: API_GUIDE.md  AUTHENTICATION.md  DEPLOYMENT_NOTES.md  ENDPOINTS.md  README.md  architecture_review.md  code_review.md  dependency_graph.md  performance_report.md  project_tree.md  refactoring_summary.md  technical_debt_report.md
models/: best_churn_model.pkl  best_forecast_model.pkl  customer_pipeline.pkl  customer_scaler.pkl  forecast_pipeline.pkl  forecast_scaler.pkl  inventory_pipeline.pkl  inventory_risk_model.pkl  inventory_scaler.pkl  kmeans.pkl  pca.pkl  probability_calibrator.pkl  scaler.pkl  tsne.pkl
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  04_forecasting.ipynb  05_inventory_optimization.ipynb  06_customer_churn.ipynb
powerbi/: business_kpis.md  dashboard_layout.md  data_model.md  dax_measures.md  design_guidelines.md  executive_walkthrough.md  interactivity_guidelines.md  performance_guidelines.md  report_specification.md  star_schema.md  theme-light.json  theme.json  user_guide.md  visual_library.md
processed/: abc_analysis.csv  abc_xyz_matrix.csv  business_alerts.csv  business_decisions.csv  cluster_metrics.csv  customer_business_actions.csv  customer_health_scores.csv  customer_metrics.csv  (+23 more)
(+175 files in other folders)
